# openglc

./: .gitignore  CMakeLists.txt  Makefile  README.md  level.h  main.c
Engine/: App.c  App.h  CMakeLists.txt  cam.c  cam.h  editor.c  editor.h  gfx.c  gfx.h  level.c  level.h  opengl.h  portal.c  portal.h  prim.c  prim.h  state.h  text.c  text.h
Engine/res/: level1.h  level2.h  level3.h  level4.h
Engine/util/: math.c  math.h
src/: cam.c  cam.h  gfx.c  gfx.h  main.c  primv.c  primv.h  state.h  text.c  text.h
src/util/: math.c  math.h
